// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses query 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "GetPersonsHome",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "alias": Object {
              "kind": "Name",
              "value": "person",
            },
            "arguments": Array [],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "currentPerson",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [
                    Object {
                      "kind": "Argument",
                      "name": Object {
                        "kind": "Name",
                        "value": "cache",
                      },
                      "value": Object {
                        "kind": "Variable",
                        "name": Object {
                          "kind": "Name",
                          "value": "cache",
                        },
                      },
                    },
                  ],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "home",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "street1",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "street2",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "state",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "city",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "zip",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "country",
                        },
                        "selectionSet": null,
                      },
                    ],
                  },
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [
        Object {
          "defaultValue": null,
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NamedType",
            "name": Object {
              "kind": "Name",
              "value": "Boolean",
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "cache",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 204,
    "source": Source {
      "body": "
  query GetPersonsHome($cache: Boolean) {
    person: currentPerson {
      home(cache: $cache) {
        street1
        street2
        state
        city
        zip
        country
      }
    }
  }
",
      "name": "GraphQL",
    },
    "start": 3,
  },
}
`;

exports[`renders error version 1`] = `
<div
  style={
    Object {
      "bottom": 0,
      "position": "fixed",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Err
    msg="Looks like there was a problem"
  />
  ;
</div>
`;

exports[`renders loading version 1`] = `
<div
  style={
    Object {
      "bottom": 0,
      "position": "fixed",
      "top": 0,
      "width": "100%",
    }
  }
>
  <Loading
    msg="Updating your information..."
  />
  ;
</div>
`;

exports[`renders success version 1`] = `
<Success
  msg="Your information has been updated!"
/>
`;

exports[`renders with props 1`] = `
<Layout
  home={Object {}}
  update={[Function]}
/>
`;

exports[`renders without person home 1`] = `
<Layout
  home={
    Object {
      "city": null,
      "country": null,
      "state": null,
      "street1": null,
      "street2": null,
      "zip": null,
    }
  }
  update={[Function]}
/>
`;

exports[`test parses query 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "name": Object {
        "kind": "Name",
        "value": "GetPersonsHome",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "selections": Array [
          Object {
            "alias": Object {
              "kind": "Name",
              "value": "person",
            },
            "arguments": Array [],
            "directives": Array [],
            "kind": "Field",
            "name": Object {
              "kind": "Name",
              "value": "currentPerson",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": null,
                  "arguments": Array [
                    Object {
                      "kind": "Argument",
                      "name": Object {
                        "kind": "Name",
                        "value": "cache",
                      },
                      "value": Object {
                        "kind": "Variable",
                        "name": Object {
                          "kind": "Name",
                          "value": "cache",
                        },
                      },
                    },
                  ],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "home",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "street1",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "street2",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "state",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "city",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "zip",
                        },
                        "selectionSet": null,
                      },
                      Object {
                        "alias": null,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "country",
                        },
                        "selectionSet": null,
                      },
                    ],
                  },
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [
        Object {
          "defaultValue": null,
          "kind": "VariableDefinition",
          "type": Object {
            "kind": "NamedType",
            "name": Object {
              "kind": "Name",
              "value": "Boolean",
            },
          },
          "variable": Object {
            "kind": "Variable",
            "name": Object {
              "kind": "Name",
              "value": "cache",
            },
          },
        },
      ],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 204,
    "source": Source {
      "body": "
  query GetPersonsHome($cache: Boolean) {
    person: currentPerson {
      home(cache: $cache) {
        street1
        street2
        state
        city
        zip
        country
      }
    }
  }
",
      "name": "GraphQL",
    },
    "start": 3,
  },
}
`;

exports[`test renders error version 1`] = `
<div
  style={
    Object {
      "bottom": 0,
      "position": "fixed",
      "top": 0,
      "width": "100%",
    }
  }>
  <Err
    msg="Looks like there was a problem" />
  ;
</div>
`;

exports[`test renders loading version 1`] = `
<div
  style={
    Object {
      "bottom": 0,
      "position": "fixed",
      "top": 0,
      "width": "100%",
    }
  }>
  <Loading
    msg="Updating your information..." />
  ;
</div>
`;

exports[`test renders success version 1`] = `
<Success
  msg="Your information has been updated!" />
`;

exports[`test renders with props 1`] = `
<Layout
  home={Object {}}
  update={[Function]} />
`;

exports[`test renders without person home 1`] = `
<Layout
  home={
    Object {
      "city": null,
      "country": null,
      "state": null,
      "street1": null,
      "street2": null,
      "zip": null,
    }
  }
  update={[Function]} />
`;
